# sportdata

./: .gitignore  pyproject.toml
src/sportdata/american_football/: enums.py  models.py
tests/american_football/: test_models.py
