[project]
name = "sportdata"
version = "0.1.0"
description = "sport data tools"
authors = [
    {name = "Ku-Alex-Bo",email = "ku.alex.bo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic (>=2.12.3,<3.0.0)"
]
license = "MIT"
license-files = ["LICENSE*"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.2,<0.15.0)",
    "pytest (>=9.0.1,<10.0.0)"
]
